--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://kit.fontawesome.com/31b37b6568.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css">
     <link rel="stylesheet" href="style.css">
     <title>World-cup</title>
 </head>
@@ -14,7 +15,7 @@
         <div class="header">
             <h1>The Greatest show <br> on the earth</h1>
             <p>Contrary to popular belief, is not <br> simply random text.</p>
-            <button>Watch Live</button>
+            <button>Watch Live <i class="fa fa-angle-right" aria-hidden="true"></i></button>
         </div>
         <div class="banner">
             <img src="img/roanldo.png">
@@ -99,6 +100,11 @@
                         <a href="#">Goal Live</a>
                     </li>
                 </ul>
+            </div>
+            <div class="social-icon">
+                <a href="facebook.comhttps://www.facebook.com/groups/programmingherocommunity"><i class="fa-brands fa-facebook"></i></a></i>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram"></i></a> 
+                <a href="https://www.linkedin.com/"><i class="fa-brands fa-linkedin"></i></a>
             </div>
         </div>
     </footer>
