--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
         <div class="header">
             <h1>The Greatest show <br> on the earth</h1>
-            <p>Contrary to popular belief, is not <br> simply random text.</p>
+            <p>Cristiano Ronaldo is one of the greatest <br> players to ever play soccer.</p>
             <button>Watch Live <i class="fa fa-angle-right" aria-hidden="true"></i></button>
         </div>
         <div class="banner">
@@ -35,47 +35,41 @@
             <div class="box">
                 <img src="img/Blog Image.png" alt="" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                     <p><img src="img/Time Icon.png" alt="">10h</p>
                     <p><img src="img/Chat Icon.png" alt="">23</p>
             </div>
             <div class="box">
                 <img src="img/Blog Image.png" alt="" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                     <p><img src="img/Time Icon.png" alt="">10h</p>
                     <p><img src="img/Chat Icon.png" alt="">23</p>
             </div><div class="box">
                 <img src="img/Blog Image.png" alt="" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                     <p><img src="img/Time Icon.png" alt="">10h</p>
                     <p><img src="img/Chat Icon.png" alt="">23</p>
             </div>
             <div class="box">
                 <img src="img/Blog Image.png" alt="" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                     <p><img src="img/Time Icon.png" alt="">10h</p>
                     <p><img src="img/Chat Icon.png" alt="">23</p>
             </div>
             <div class="box">
                 <img src="img/Blog Image.png" alt="" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                 <p><img src="img/Time Icon.png" alt="">10h</p>
                 <p><img src="img/Chat Icon.png" alt="">23</p>
             </div>
             <div class="box">
                 <img src="img/Blog Image.png" class="section-benner">
                 <button class="img-button">Transfer</button>
-                <h3>Transfer Live: Chlesea in talks <br>
-                    over Kimpenbe transfer</h3>
+                <h3>You can watch the game live just by clicking</h3>
                     <p><img src="img/Time Icon.png" alt="">10h</p>
                     <p><img src="img/Chat Icon.png" alt="">23</p>
             </div>
